project/tests/rsl_test_cases/pass/ADVANCED_MATH_FUNC.rsl
scheme ADVANCED_MATH_FUNC =
    class
      value
        complexCalc : Int >< Int -> Int
        complexCalc(x, y) is ((x + 2) * y + 3) / (x - y)
    end
  