project/tests/rsl_test_cases/fail/NESTED_LOGIC.rsl
scheme NESTED_LOGIC_NEGATIVE =
  class
    value
      evaluate : Int >< Bool -> Bool
      evaluate(x, y) is ((x > 5) /\ (y < 5)) \/ ((x <= 5) /\ (y >= 5))
  end
